// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BannerToggle accepts standard \`button\` props 1`] = `
.emotion-0 {
  vertical-align: middle;
}

.emotion-1 {
  position: absolute;
  top: 1rem;
  right: 1rem;
  background: none;
  padding: 0;
  cursor: pointer;
  border: none;
  font-size: 1rem;
  color: #8697a2;
}

@media (min-width:31.25em) {
  .emotion-1 {
    top: 1.5rem;
    right: 1.5rem;
  }
}

<button
  className="emotion-1"
  onClick={[Function]}
>
  <svg
    className="emotion-0"
    height="1em"
    viewBox="0 0 20 20"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12.609 10L20 17.391 17.391 20 10 12.609 2.609 20 0 17.391 7.391 10 0 2.609 2.609 0 10 7.391 17.391 0 20 2.609z"
      fill="currentColor"
      fillRule="evenodd"
    />
  </svg>
</button>
`;

exports[`BannerToggle renders correctly 1`] = `
.emotion-0 {
  vertical-align: middle;
}

.emotion-1 {
  position: absolute;
  top: 1rem;
  right: 1rem;
  background: none;
  padding: 0;
  cursor: pointer;
  border: none;
  font-size: 1rem;
  color: #8697a2;
}

@media (min-width:31.25em) {
  .emotion-1 {
    top: 1.5rem;
    right: 1.5rem;
  }
}

<button
  className="emotion-1"
>
  <svg
    className="emotion-0"
    height="1em"
    viewBox="0 0 20 20"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12.609 10L20 17.391 17.391 20 10 12.609 2.609 20 0 17.391 7.391 10 0 2.609 2.609 0 10 7.391 17.391 0 20 2.609z"
      fill="currentColor"
      fillRule="evenodd"
    />
  </svg>
</button>
`;
